--- a/assets/Style.css
+++ b/assets/Style.css
@@ -4,3 +4,52 @@ body {
     line-height: 1.3;
     background-color: red;
 }
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1%;
+    background-color: #13293d;
+    color: #fff;
+  }
+
+  header nav ul li {
+    display: inline;
+    padding: 0 8px;
+  }
+
+  .nav-link {
+      color: #fff;
+  }
+
+  .column-left {
+      width: 25%;
+      height: 100%;
+      display: block;
+      float: left;
+      padding: 0 5% 5% 5%;
+      margin-top: 5%;
+  }
+
+  .column-right {
+    width: 75%;
+    height: 100%;
+    display: block;
+    float: right;
+    padding: 0 5% 5% 5%;
+    border-left: 5px solid black;
+    margin-top: 5%;
+}
+
+    .row {
+    display: block;
+    min-height: 100px;
+    height: 100%;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    clear: both;
+    
+
+}
