--- a/assets/Style.css
+++ b/assets/Style.css
@@ -2,7 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     line-height: 1.3;
-    background-color: red;
+    background-color:  #13293d;
+    color:white;
 }
 
 header {
@@ -10,8 +11,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1%;
-    background-color: #13293d;
-    color: #fff;
+    background-color: red;
+    color: blue;
   }
 
   header nav ul li {
@@ -20,7 +21,7 @@ header {
   }
 
   .nav-link {
-      color: #fff;
+      color: blue;
   }
 
   .column-left {
@@ -38,7 +39,7 @@ header {
     display: block;
     float: right;
     padding: 0 5% 5% 5%;
-    border-left: 5px solid black;
+    border-left: 5px solid lime;
     margin-top: 5%;
 }
 
