--- a/assets/Style.css
+++ b/assets/Style.css
@@ -1,56 +1,64 @@
-body {
-    display: flex;
-    flex-direction: column;
-    line-height: 1.3;
-    background-color:  #13293d;
-    color:white;
+    body {
+        display: flex;
+        flex-direction: column;
+        line-height: 1.3;
+        background-color:  #13293d;
+        color:white;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1%;
-    background-color: red;
-    color: blue;
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10%;
+        background-image: url("../Images/cool-background.png");
+
   }
 
   header nav ul li {
-    display: inline;
-    padding: 0 8px;
-  }
-
-  .nav-link {
-      color: blue;
+        display: inline;
+        padding: 8px;
+        font-size: 25px;
+        color: green;
   }
 
   .column-left {
-      width: 25%;
-      height: 100%;
-      display: block;
-      float: left;
-      padding: 0 5% 5% 5%;
-      margin-top: 5%;
+
+        width: 25%;
+        height: 100%;
+        display: block;
+        float: left;
+        padding: 0 5% 5% 5%;
+        margin-top: 5%;
   }
 
   .column-right {
-    width: 75%;
-    height: 100%;
-    display: block;
-    float: right;
-    padding: 0 5% 5% 5%;
-    border-left: 5px solid lime;
-    margin-top: 5%;
+        width: 75%;
+        height: 100%;
+        display: block;
+        float: right;
+        padding: 0 5% 5% 5%;
+        border-left: 5px solid lime;
+        margin-top: 5%;
 }
 
     .row {
-    display: block;
-    min-height: 100px;
-    height: 100%;
-    width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    clear: both;
-    
-
+        display: block;
+        min-height: 100px;
+        height: 100%;
+        width: 100%;
+        padding-left: 10%;
+        padding-right: 10%;
+        clear: both;
 }
+
+
+    .name {
+        font-size: 30px;
+        padding-left: 5%;
+        color: red;
+}
+
+
+
+    
