--- a/assets/Style.css
+++ b/assets/Style.css
@@ -5,6 +5,7 @@
         background-color:  #13293d;
         color:white;
 }
+    /*header section*/
 
     header {
         display: flex;
@@ -19,8 +20,15 @@
         display: inline;
         padding: 8px;
         font-size: 25px;
-        color: green;
   }
+
+  .name {
+    font-size: 30px;
+    padding-left: 5%;
+    color: red;
+  }
+
+/*main section left*/
 
   .column-left {
 
@@ -32,6 +40,18 @@
         margin-top: 5%;
   }
 
+  .row {
+    display: block;
+    min-height: 100px;
+    height: 100%;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    clear: both;
+  }
+
+  /*main right*/
+
   .column-right {
         width: 75%;
         height: 100%;
@@ -42,22 +62,29 @@
         margin-top: 5%;
 }
 
-    .row {
-        display: block;
-        min-height: 100px;
-        height: 100%;
-        width: 100%;
-        padding-left: 10%;
-        padding-right: 10%;
-        clear: both;
-}
+ 
+    figure {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        min-height: 100%;
+        margin: 5rem 2rem;
+        outline: 2px dashed white;
+        transition: all 0.5s ease-in-out;
+    
+    }
+    figure h2 {
+        position: relative;
+        background-color: gray;
+        color: purple;
+        border: 2px solid white;
+        border-radius: 8px;
+        transition: all 0.5s ease-in-out;
+        top: -4rem;
+        margin: 0 auto;
+        width: 95%;
+    }
 
-
-    .name {
-        font-size: 30px;
-        padding-left: 5%;
-        color: red;
-}
 
 
 
