--- a/assets/Style.css
+++ b/assets/Style.css
@@ -63,7 +63,7 @@
 }
 
  
-    figure {
+    #Scratch {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -73,7 +73,7 @@
         transition: all 0.5s ease-in-out;
     
     }
-    figure h2 {
+    #Scratch h2 {
         position: relative;
         background-color: gray;
         color: purple;
