--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 10%;
-        background-image: url("../Images/cool-background.png");
+        background-image: url("../images/cool-background.png");
 
   }
 
