--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,13 @@
         border-radius: 8px;
     }
 
+    .project-card p {
+      background-color: gray;
+      color: purple;
+      border: 2px solid white;
+      border-radius: 8px;
+  }
+
     .clear-fix {
       clear:both;
     }
@@ -87,6 +94,9 @@
 
     .social-icon {
       margin: 5%;
+      background-color: gray;
+      color: purple;
+      border: 2px solid white;
     }
 
 
